[package]
name = "cloudflare-warp-speedtest-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
clap_complete = "4.5.55"
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.0"
ipnetwork = "0.21.1"
log = "0.4.27"
rand = "0.9.2"
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = "0.1.17"
